# mcp-doc-retriever

./: .dockerignore  .env  .gitignore  .roomodes  .roorules  CLAUDE.md  Dockerfile  README.md  code  config.json  docker-compose.yml  lesson.json  output.html  pyproject.toml  run_tests.sh  task.md  temp_lesson.json  test_downloader.py  test_downloader_security.py  test_example_index.jsonl  test_searcher.py  verify_server.py
.claude/: settings.json
.roo/: mcp.json  system-prompt-architect  system-prompt-debugger
_archive/: Dockerfile.custom  downloader.py.original
direct_test_downloads/index/: direct_example_test.jsonl
downloads/: valid_file.html
downloads/cli_test/index/: cli_download.jsonl
downloads/content/docs.python.org/: index_playwright.html
downloads/index/: 77481ed7-2ee1-4390-a88e-124862200351.jsonl  security_test.jsonl
downloads_standalone_test/: standalone_lessons.db  standalone_status.db
downloads_standalone_test/index/: standalone_5e66def1.jsonl  standalone_72a9d3d1.jsonl  standalone_ab0b4366.jsonl  standalone_c58eda8e.jsonl  standalone_e48900ca.jsonl  standalone_f8326937.jsonl
downloads_test/index/: cli_download.jsonl
manual_cli_test/git_correct/index/: manual_git_test_correct.jsonl
manual_cli_test/git_verify_script/index/: git_test_script.jsonl
manual_cli_test/web/index/: web_test.jsonl
manual_cli_test/web_coder/index/: web_test_coder.jsonl
manual_cli_test/web_correct/index/: manual_web_test_correct.jsonl
manual_cli_test/web_human/index/: web_test_human.jsonl
manual_cli_test/web_verify_script/index/: web_test_script.jsonl
output/: json_output.json  markdown_output.json
prompts/: system_prompt.md
repo_docs/: dependency_instructions.md
scripts/: check_deps.py  demo_extract.py  fix_lessons.py  git_sparse_download.sh  init_arangodb_lessons.py  test_api.py  test_download.py  test_mcp_integration.py  test_runner.sh  test_search.py  test_searcher.py  verify_local.sh
src/direct_test_downloads/index/: direct_example_test.jsonl
src/mcp_doc_retriever/: api.py  cli.py  config.py  core.py  downloader.py  example_extractor.py  fetchers.py  lessons_cli.py  main.py  models.py  playwright_fetcher.py  requests_fetcher.py  searcher.py  utils.py
src/mcp_doc_retriever.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_doc_retriever/_archive/: lessons_db.py  main_pre_sqlite.py  playwright_fetcher.py  test_downloader.py  test_downloader_security.py  test_playwright_security.py  test_recursive_download_security.py  text_chunker copy.py  text_chunker_debug.py  text_chunker_simple.py  text_chunker_simplev2.py
src/mcp_doc_retriever/arangodb/: arango_setup.py  cli.py  config.py  crud_api.py  crud_api_original.py  crud_lessons.py  crud_search.py  embedding_utils.py  initialize_litellm_cache.py  lessons.py  main_usage.py  new_lessons_learned.json  relationships.py  search_api.py
src/mcp_doc_retriever/context7/: core.py  docker-compose.yml  file_discovery.py  markdown_extractor.py  orchestrate.py  rst_extractor.py
src/mcp_doc_retriever/docs/: lessons_learned.json
src/mcp_doc_retriever/downloader/: README.md  downloader_cli.py  fetchers.py  git_downloader.py  helpers.py  models.py  robots.py  web_downloader.py  workflow.py
src/mcp_doc_retriever/project_state/: arango_db.py  db.py
src/mcp_doc_retriever/searcher/: README.md  advanced_extractor.py  basic_extractor.py  helpers.py  markdown_extractor.py  scanner.py  searcher.py  tree_sitter_extractor.py
test_cli_dir/index/: test-cli-download.jsonl
test_data/: complex_doc.json  depth_child1.html  depth_child2.html  depth_root.html  mixed_content.html  mixed_content.md  sample.html
test_data/index/: test_dl.jsonl
test_downloads/index/: ssrf_test.jsonl
tests/: README.md  test_integration_api.py  test_mcp_retriever_e2e_verbose.py
tests/e2e/: conftest.py  helpers.py  test_01_api_health.py  test_02_api_web_download.py  test_03_git_download.py  test_04_api_playwright_download.py  test_05_api_search.py  test_06_cli_download.py
tests/integration/downloader/: test_git.py  (+1 more)
tests/local/: conftest.py  helpers.py  test_01_local_api_download.py  test_02_local_api_search.py  test_03_local_cli.py
tests/unit/: test_utils.py
web_downloader_test/index/: web_example_httpbin.jsonl
(+45 files in other folders)
